# card_recognize

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  config.yaml  index.d.ts  index.js  package.json
dev/scripts/: config.yaml  generate_second.py  get_scan.py  post_data.py
dev/test_data/cards/193558/: scan.json
dev/test_data/cards/194751/: scan.json  scan_second.json
dev/test_data/cards/195013/: scan.json
dev/test_data/cards/197864/: scan.json
dev/test_node/: config.yaml  test.js  test_base64.js  test_img.js  test_second.js
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: config.rs  config.yaml  lib.rs
src/models/: mod.rs  rec_result.rs  scan_json.rs
src/my_utils/: image.rs  io.rs  math.rs  mod.rs  node.rs
src/recognition/: baizheng.rs  barcode.rs  black_fill.rs  engine.rs  mod.rs  numbers.rs  vx.rs
