[package]
name = "card_recognize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
image = "0.25"
imageproc = "0.24"
once_cell = "1.8.0"
serde_yaml = "0.9.34"
rxing = "0.5.8"
wasm-bindgen = "0.2"
image-base64-wasm = "0.6.0"


[profile.dev]
opt-level = 3
debug = false

[lib]
crate-type = ["cdylib"]