[package]
edition = "2021"
name = "card_recognize"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
image = "0.25"
imageproc = "0.24"
once_cell = "1.8.0"
serde_yaml = "0.9.34"
rxing = "0.5.8"
image-base64-wasm = "0.6.0"
cargo-xwin = "0.16.4"
ab_glyph = "0.2.17"
font-kit = "0.12.0"


[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"

[profile.dev]
opt-level = 3
debug = false
